sington study 3 way